--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
     "background_color": "#0f172a",
     "display": "browser",
     "scope": "/",
-    "start_url": "/"
+    "start_url": "/",
+    "description": "roshit web app"
   }
