--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "tw-elements": "^1.0.0-beta3"
+    "tw-elements": "^1.0.0-beta3",
+    "typed.js": "^2.0.16"
   }
 }
